# petitboot

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  TODO  bootstrap  components.html  configure.ac  configure.ac.in  devices.c  genindex.html  index.html  objects.inv  overview.html  petitboot-paths.h  petitboot.c  petitboot.h  platforms.html  rules.mk  search.html  searchindex.js  version.sh
artwork/: cursor
discover/: Makefile.am  boot.c  boot.h  cdrom.c  cdrom.h  device-handler.c  device-handler.h  devmapper.c  devmapper.h  discover-server.c  discover-server.h  dt.c  dt.h  elf.c  elf.h  event-parser.c  event.c  event.h  file.c  file.h  grub2-parser.c  hostboot.c  hostboot.h  ipmi.c  ipmi.h  kboot-parser.c  log.c  log.h  message.h  native-parser.c  network.c  network.h  params.c  parser-conf.c  parser-conf.h  parser-utils.c  parser-utils.h  parser.c  parser.h  paths.c  (+22 more)
discover/grub2/: Makefile.am  blscfg.c  builtins.c  env.c  grub2-lexer.l  grub2-parser.y  grub2.c  grub2.h  lexer.l  parser-api.c  parser.y  script.c
discover/native/: Makefile.am  native-lexer.l  native-parser.y  native.c  native.h
lib/: Makefile.am
lib/array-size/: array-size.h
lib/crypt/: crypt.c  crypt.h
lib/efi/: efivar.c  efivar.h
lib/file/: file.c  file.h
lib/flash/: flash.c  flash.h
lib/fold/: fold.c  fold.h
lib/i18n/: i18n.c  i18n.h
lib/list/: list.c  list.h
lib/log/: log.c  log.h
lib/param_list/: param_list.c  param_list.h
lib/pb-config/: pb-config.c  pb-config.h  storage-null.c  storage-powerpc-nvram.c  storage-test.c  storage.h
lib/pb-protocol/: pb-protocol.c  pb-protocol.h
lib/process/: process.c  process.h
lib/security/: common.c  gpg.c  gpg.h  none.c  openssl.c  security.h
lib/system/: system.c  system.h
lib/talloc/: talloc.c  talloc.h
lib/types/: types.c  types.h
lib/url/: url.c  url.h
lib/util/: util.c  util.h
lib/waiter/: waiter.c  waiter.h
man/: Makefile.am  pb-console.8  pb-cui.8  pb-discover.8  pb-event.8  pb-nc.8  pb-twin.8  pb-udhcpc.8  petitboot-nc.8  petitboot-twin.8  petitboot.8
test/: Makefile.am  hotplug-device.sh  parser-test.c  parser-test.sh
test/lib/: Makefile.am  list-test.c  test-efivar.c  test-fold.c  test-process-async-stdout.c  test-process-async.c  test-process-both.c  test-process-noargs.c  test-process-parent-stdout.c  test-process-stderr-stdout.c  test-process-stderr.c  test-process-stdout-eintr.c  test-process-sync-stdout.c  test-process-sync.c  test-security-openssl-decrypt.c  test-security-openssl-verify.c
test/lib/data/security/: cert.p12  cert.pem  key.pem  pubkey.pem  rootdata.cmsenc  rootdata.cmsencver  rootdata.cmsver  rootdata.txt  rootdata_different.txt  rootdatasha256.sig  rootdatasha512.sig  wrong_cert.pem  wrong_key.pem
test/list/: Makefile.am  list-test.c
test/parser/: Makefile.am  extract-config.awk  handler.c  main.c  network.c  parser-test.c  parser-test.h  run-parser-tests.in  test-grub2-blscfg-default-filename.c  test-grub2-blscfg-default-index.c  test-grub2-blscfg-default-title.c  test-grub2-blscfg-fcos38.c  test-grub2-blscfg-multiple-bls.c  test-grub2-blscfg-opts-config.c  test-grub2-blscfg-opts-grubenv.c  test-grub2-default-id-space.c  test-grub2-default-id.c  test-grub2-default-index.c  test-grub2-default-multiword.c  test-grub2-default.c  test-grub2-devpath-scripting.c  test-grub2-devpath.c  test-grub2-empty.c  test-grub2-f18-ppc64.c  test-grub2-f20-ppc64.c  test-grub2-if-formats.c  test-grub2-implicit-default-invalid.c  test-grub2-implicit-default-unset.c  test-grub2-lexer-error.c  test-grub2-load-env.c  test-grub2-menuentry-formats.c  test-grub2-multiple-id.c  test-grub2-multiple-resolve.c  test-grub2-noeol.c  test-grub2-nondefault-prefix.c  test-grub2-parser-error.c  test-grub2-pos-param.c  test-grub2-rhcos-ootpa.c  test-grub2-rhel8.c  test-grub2-save-env-dash-f.c  (+65 more)
test/parser/003/: expected-output
test/parser/101/ps3da1/etc/: kboot.conf
test/parser/data/: grub2-blscfg-fcos38.conf  grub2-f18-ppc64.conf  grub2-f20-ppc.conf  grub2-rhcos-ootpa.conf  grub2-rhel8.conf  grub2-ubuntu-13_04-x86.conf  native-short.conf  syslinux-include-nest-1.cfg  syslinux-include-nest-2.cfg  syslinux-include-root.cfg  yaboot-rh8-ppc64.conf
test/parser/data/grub-01/: grub.cfg
test/parser/data/grub-02/: grub.cfg
test/parser/data/kboot-04/: expected-output
test/ui/: Makefile.am  console-sequence.c
test/urls/: Makefile.am  parse-url.c  run-url-test.in
test/urls/data/: double-slash.test  http-simple.test  ipv6-full.test  ipv6-multidirs.test  ipv6-noport.test  join-absolute.test  join-full.test  join-relative.test  localpath.test
ui/: Makefile.am
ui/common/: Makefile.am  discover-client.c  discover-client.h  joystick.c  joystick.h  loader.c  loader.h  ps3.c  ps3.h  timer.c  timer.h  ui-system.c  ui-system.h  url.c  url.h
ui/common/artwork/: COPYING-tux
ui/ncurses/: Makefile.am  console-codes.c  console-codes.h  generic-main-help.c  generic-main.c  nc-add-url-help.c  nc-add-url.c  nc-add-url.h  nc-auth.c  nc-auth.h  nc-boot-editor-help.c  nc-boot-editor.c  nc-boot-editor.h  nc-config-help.c  nc-config.c  nc-config.h  nc-cui-help.c  nc-cui.c  nc-cui.h  nc-helpscreen.c  nc-helpscreen.h  nc-ked.c  nc-ked.h  nc-lang.c  nc-lang.h  nc-menu.c  nc-menu.h  nc-plugin-help.c  nc-plugin-menu-help.c  nc-plugin.c  nc-plugin.h  nc-scr.c  nc-scr.h  nc-statuslog.c  nc-statuslog.h  nc-subset.c  nc-subset.h  nc-sysinfo-help.c  nc-sysinfo.c  nc-sysinfo.h  (+8 more)
ui/test/: Makefile.am  discover-test.c  pb-test.c
ui/twin/: Makefile.am  main-generic.c  main-ps3.c  pb-twin.c  pbt-client.c  pbt-client.h  pbt-main.c  pbt-main.h  pbt-menu.c  pbt-menu.h  pbt-scr.c  pbt-scr.h
utils/: 99-petitboot.rules  Makefile.am  bb-kexec-reboot  ipmi-mailbox-config.py  kboot.conf.sample  logrotate.conf  pb-config.c  pb-console  pb-event.c  pb-exec  pb-plugin  pb-sos  pb-sysinfo  pb-udhcpc  ps3-kboot-0.1-petitboot.patch  scsi-rescan  udhcpc  yaboot.conf.sample
utils/hooks/: 01-create-default-dtb  20-set-stdout  20-update-dtb-sample  30-add-offb.c  30-dtb-updates.c  90-sort-dtb
(+84 files in other folders)
